--- a/Game Replay/StatView.xib
+++ b/Game Replay/StatView.xib
@@ -3,41 +3,13 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8142"/>
     </dependencies>
-    <customFonts key="customFonts">
-        <mutableArray key="AvenirNext.ttc">
-            <string>AvenirNext-UltraLight</string>
-        </mutableArray>
-    </customFonts>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="StatView">
-            <connections>
-                <outlet property="centerProgressView" destination="im9-Cb-vDc" id="WeF-PA-CEd"/>
-                <outlet property="leadProgressView" destination="tu3-jy-o3T" id="viY-Zc-dQx"/>
-                <outlet property="trailProgressView" destination="gUm-9M-LrT" id="Y1I-jT-JpR"/>
-            </connections>
-        </placeholder>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="StatView"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
             <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gUm-9M-LrT" customClass="StatsProgressView" customModule="Game_Replay" customModuleProvider="target">
-                    <rect key="frame" x="65" y="228" width="240" height="200"/>
-                    <animations/>
-                    <color key="backgroundColor" red="0.50196081400000003" green="0.50196081400000003" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                </view>
-                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="tu3-jy-o3T" customClass="StatsProgressView" customModule="Game_Replay" customModuleProvider="target">
-                    <rect key="frame" x="392" y="228" width="240" height="200"/>
-                    <animations/>
-                    <color key="backgroundColor" red="0.50196081400000003" green="0.25098040700000002" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                </view>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Play Accuracy" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="W2M-La-aQ5">
-                    <rect key="frame" x="296" y="26" width="432" height="57"/>
-                    <animations/>
-                    <fontDescription key="fontDescription" name="AvenirNext-UltraLight" family="Avenir Next" pointSize="41"/>
-                    <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                    <nil key="highlightedColor"/>
-                </label>
                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bep-Fb-fSo">
                     <rect key="frame" x="958" y="40" width="39" height="30"/>
                     <animations/>
@@ -46,14 +18,9 @@
                         <action selector="closeStats:" destination="-1" eventType="touchUpInside" id="Wc1-ma-gT2"/>
                     </connections>
                 </button>
-                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="im9-Cb-vDc" customClass="StatsProgressView" customModule="Game_Replay" customModuleProvider="target">
-                    <rect key="frame" x="719" y="228" width="240" height="200"/>
-                    <animations/>
-                    <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                </view>
             </subviews>
             <animations/>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
         </view>
     </objects>
